# gascraft2d

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  gascraft2d.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  modules.rst
src/gascraft2d/: __init__.py  core.py  game.py
tests/: test_core.py
